codegen/ui_tests/non_clonable_second.stderr
error[E0277]: the trait bound `NonClonable: Clone` is not satisfied
  --> ui_tests/non_clonable_second.rs:11:27
   |
11 | pub fn test_fn(a: u32, b: NonClonable) -> bool {
   |                           ^^^^^^^^^^^ the trait `Clone` is not implemented for `NonClonable`
